@@ -219,13 +219,19 @@ use less (virtual) memory.
 @pxref{Lazy loading, , Lazy loading, R-ints,  R Internals}.)
 @end ifset
 
+@cindex CRAN
+@acronym{CRAN} is a network of WWW sites holding the @R{} distributions
+and contributed code, especially @R{} packages.  Users of @R{} are
+encouraged to join in the collaborative project and to submit their own
+packages to @acronym{CRAN}: current instructions are linked from
+@uref{http://CRAN.R-project.org/banner.shtml#submitting}.
+
 
 @menu
 * Package structure::           
 * Configure and cleanup::       
 * Checking and building packages::  
 * Writing package vignettes::   
-* Submitting a package to CRAN::  
 * Package namespaces::          
 * Writing portable packages::   
 * Diagnostic messages::         
@@ -1050,9 +1056,9 @@ exclude files from being installed, one can specify a list of exclude
 patterns in file @file{.Rinstignore} in the top-level source directory.
 These patterns should be Perl-like regular expressions (see the help for
 @code{regexp} in @R{} for the precise details), one per line, to be
-matched@footnote{case-insensitively on Windows.} against the file and
-directory paths, e.g.@: @file{doc/.*[.]png$} will exclude all PNG files
-in @file{inst/doc} based on the (lower-case) extension.
+matched case-insensitively@footnote{on all platforms from @R{} 3.1.0}
+against the file and directory paths, e.g.@: @file{doc/.*[.]png$} will
+exclude all PNG files in @file{inst/doc} based on the extension.
 
 Note that with the exceptions of @file{INDEX},
 @file{LICENSE}/@file{LICENCE} and @file{NEWS}, information files at the
@@ -2392,12 +2398,12 @@ To exclude files from being put into the package, one can specify a list
 of exclude patterns in file @file{.Rbuildignore} in the top-level source
 directory.  These patterns should be Perl-like regular expressions (see
 the help for @code{regexp} in @R{} for the precise details), one per
-line, to be matched@footnote{case-insensitively on Windows.} against the
-file and directory names relative to the top-level package source
-directory.  In addition, directories from source control
-systems@footnote{called @file{CVS} or @file{.svn} or @file{.arch-ids} or
-@file{.bzr} or @file{.git} (but not files called @file{.git}) or
-@file{.hg}.} or from @command{eclipse}@footnote{called
+line, to be matched case-insensitively@footnote{on all platforms from
+@R{} 3.1.0.} against the file and directory names relative to the
+top-level package source directory.  In addition, directories from
+source control systems@footnote{called @file{CVS} or @file{.svn} or
+@file{.arch-ids} or @file{.bzr} or @file{.git} (but not files called
+@file{.git}) or @file{.hg}.} or from @command{eclipse}@footnote{called
 @file{.metadata}.}, directories with names ending @file{.Rcheck} or
 @file{Old} or @file{old} and files @file{GNUMakefile},
 @file{Read-and-delete-me} or with base names starting with @samp{.#}, or
@@ -2535,7 +2541,7 @@ binaries. Note that this is intended for developers on other platforms
 who do not have access to Windows but wish to provide binaries for the
 Windows platform.
 
-@node Writing package vignettes, Submitting a package to CRAN, Checking and building packages, Creating R packages
+@node Writing package vignettes, Package namespaces, Checking and building packages, Creating R packages
 @section Writing package vignettes
 @cindex vignettes
 @cindex Sweave
@@ -2788,21 +2794,8 @@ it supports other input formats as well as @file{.Rmd}.)
 See the @code{?tools::vignetteEngine} help topic for details
 on engine registration.
 
-@node Submitting a package to CRAN, Package namespaces, Writing package vignettes, Creating R packages
-@section Submitting a package to @acronym{CRAN}
-@cindex CRAN
-@cindex CRAN submission
-@cindex Submitting to CRAN
 
-@acronym{CRAN} is a network of WWW sites holding the @R{} distributions
-and contributed code, especially @R{} packages.  Users of @R{} are
-encouraged to join in the collaborative project and to submit their own
-packages to @acronym{CRAN}.
-
-Current submission instructions are linked from
-@uref{http://CRAN.R-project.org/banner.shtml#submitting}.
-
-@node Package namespaces, Writing portable packages, Submitting a package to CRAN, Creating R packages
+@node Package namespaces, Writing portable packages, Writing package vignettes, Creating R packages
 @section Package namespaces
 @cindex namespaces
 
